--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ coloredlogs>=15.0.0
 
 # Cryptography (required by telethon)
 cryptg>=0.4.0
+
+# Orchestration
+dagster>=1.6.0
+dagster-webserver>=1.6.0
